# GigaRayV0

./: .gitignore  .gitmodules  CMakeLists.txt  GigaRayV0.sln  README.md
GigaRayV0/: GigaRayV0.vcxproj  GigaRayV0.vcxproj.filters  main.cpp
GigaRayV0/shaders/: test.rgen  test.rmiss
GigaRayV0/shaders/spirv/: test.rchit.spv  test.rgen.spv  test.rmiss.spv
lightmapper/: CMakeLists.txt  main.cpp
shaders/: basic.frag  basic.vert  blur.comp  blur_common.glsl  brdf.glsl  brdf.h  color.glsl  composition.comp  create_brdf_lut.comp  cube_test.frag  cube_test.vert  equirectangular_to_cubemap.frag  fullscreen_quad.vert  generate_cubemap.vert  ggx.glsl  history_fix.comp  history_fix_alternative.comp  history_fix_mip_gen.comp  indirect_diffuse.comp  indirect_specular.comp  integrate_sh.comp  lightmap.glsl  lightmap.rchit  lightmap.rgen  lightmap.rmiss  lightmap_trace.rgen  lightmap_vis.rgen  lm_basic.frag  lm_basic.vert  lm_gbuf.frag  lm_gbuf.vert  material.glsl  math.glsl  misc.glsl  postblur.comp  preblur.comp  prefilter_envmap.comp  primary_ray.glsl  primary_ray.rchit  primary_ray.rgen  (+19 more)
shaders/spirv/: primary_ray.rchit.spv  primary_ray.rgen.spv  primary_ray.rmiss.spv  test.comp.spv  test.rchit.spv  test.rgen.spv  test.rmiss.spv
shared/: shared.h
src/: CMakeLists.txt  brdf.h  common.cpp  common.h  defines.h  ecs.cpp  ecs.h  events.cpp  events.h  g_math.cpp  g_math.h  game.cpp  game.h  gbuffer.cpp  gbuffer.h  gltf.cpp  gltf.h  input.cpp  input.h  janitor.cpp  janitor.h  lightmap.cpp  lightmap.h  logging.cpp  logging.h  main.cpp  material.h  misc.cpp  misc.h  obj.cpp  obj.h  platform.cpp  platform.h  r_mesh.cpp  r_mesh.h  r_vulkan.cpp  r_vulkan.h  renderer.cpp  renderer.h  resource_manager.h  (+15 more)
src/imgui/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
